@@ -1,5 +1,9 @@
 2020-08-07  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryService.java:
+	Added advertise(RootDevice,int,URI) method to manage NOTIFY
+	messages for root devices.
+
 	* src/main/java/ball/upnp/RootDevice.java:
 	Added getConfigId() and getMaxAge() methods.
 
